2009-02-19  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixxml/resources/ResourceUtil.java: escape '{' and
	'}' in URIs to support paths containing '{$product}'

2009-02-17  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixxml/IncludeDocumentExtension.java: set module
	from parent if none is specified for dynamic includes from within
	modules
	* src/de/schlund/pfixxml/resources/ModuleResource.java: disable
	caching on all JarURLConnections

2009-02-17  Martin Leidig  <mleidig@schlund.de>

	Added support for including XML, XSL and images from modules by
	extending the resource resolution mechanism

	Modified:
	* src/de/schlund/pfixcore/lucefix/IncludeFileHandler.java
	* src/de/schlund/pfixcore/lucefix/DocumentCache.java
	* src/de/schlund/pfixcore/editor2/core/spring/PathResolverServiceImpl.java
	* src/de/schlund/pfixcore/editor2/core/spring/internal/TargetPfixImpl.java
	* src/de/schlund/pfixcore/editor2/core/spring/internal/ImageImpl.java
	* src/de/schlund/pfixcore/editor2/core/spring/internal/IncludePartThemeVariantImpl.java
	* src/de/schlund/pfixcore/editor2/core/spring/internal/TargetAuxDepImpl.java
	* src/de/schlund/pfixcore/editor2/core/spring/internal/ProjectImpl.java
	* src/de/schlund/pfixcore/editor2/core/spring/internal/IncludePartImpl.java
	* src/de/schlund/pfixcore/editor2/core/spring/IncludeFactoryServiceImpl.java
	* src/de/schlund/pfixcore/example/EncodingTestState.java
	* src/de/schlund/pfixcore/util/DumpText.java
	* src/de/schlund/pfixcore/util/CheckIncludes.java
	* src/de/schlund/pfixxml/IncludeDocumentExtensionSaxon2.java
	* src/de/schlund/pfixxml/IncludeDocumentFactory.java
	* src/de/schlund/pfixxml/ImageThemedSrcSaxon1.java
	* src/de/schlund/pfixxml/IncludeDocumentExtension.java
	* src/de/schlund/pfixxml/DependencyTrackerSaxon2.java
	* src/de/schlund/pfixxml/DependencyTracker.java
	* src/de/schlund/pfixxml/IncludeDocumentExtensionSaxon1.java
	* src/de/schlund/pfixxml/ImageThemedSrcSaxon2.java