@@ -1,3 +1,11 @@
+2009-03-04  Martin Leidig  <mleidig@schlund.de>
+
+	Fixed resolving of XSLT includes from modules.
+
+	* src/de/schlund/pfixxml/util/Xslt.java
+	* src/de/schlund/pfixxml/resources/ModuleResource.java
+	* projects/core/build/create_depend.xsl
+
 2009-02-19  Martin Leidig  <mleidig@schlund.de>
 
 	* src/de/schlund/pfixxml/resources/ResourceUtil.java: escape '{' and
